Github pages update

--- a/src/app/core/components/footer/footer/footer.component.html
+++ b/src/app/core/components/footer/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div class="responsive auto-margin bottom-margin">
   <img
     class="center"
-    src="/assets/logo.png"
+    src="assets/logo.png"
+    alt="logo"
   />
   <p class="center-align small-text">
     For educational use only. All characters and content are the property of
