Update Character Profile

--- a/src/app/features/characters/components/character-profile/character-profile.component.html
+++ b/src/app/features/characters/components/character-profile/character-profile.component.html
@@ -7,14 +7,14 @@
 } @else {
   <article class="large-padding no-round disney-light-blue">
     <div class="grid medium-space">
-      <div class="s12 m6">
+      <div class="s12 m5">
         <img
-          class="responsive"
+          class="responsive main-image"
           [alt]="characterDetails.name"
           [src]="characterDetails.imageUrl"
         />
       </div>
-      <div class="s12 m6">
+      <div class="s12 m7">
         <div class="padding">
           <h3>{{ characterDetails.name }}</h3>
 
@@ -36,6 +36,12 @@
             [mediaItems]="characterDetails.tvShows"
             [title]="'TV Shows'"
           ></app-media-list>
+
+          <a class="button extra small-elevate small-round disney-blue"
+             [href]="characterDetails.sourceUrl">
+            Explore more Character Details
+          </a>
+
         </div>
       </div>
     </div>
