--- a/src/app/features/characters/components/character-profile/character-profile.component.scss
+++ b/src/app/features/characters/components/character-profile/character-profile.component.scss
@@ -1,9 +1,5 @@
-.large-padding {
-  padding: 4em !important;
-}
-
 .main-image {
   max-height: 530px;
   border-radius: 1em;
-  width: auto;
+  width: 100%;
 }
