--- a/src/app/features/characters/components/characters-list/characters-list.component.html
+++ b/src/app/features/characters/components/characters-list/characters-list.component.html
@@ -22,7 +22,7 @@
     } @else {
       @for (character of characters; track character?._id) {
         <div class="s12 m6 l3">
-          <article class="no-padding character-card">
+          <article class="no-padding no-round character-card">
             <div class="">
               <img
                 class="responsive large square"
